# firewoodbank2

./: .gitignore  APP_TSX_TOC.md  BUG_REPORT.md  CODE_INDEX.md  DESKTOP_ROLLOUT_CHECKLIST.md  LOGIN_HIPAA_UX_REVIEW_COMPLETION_REPORT.md  NOTES.md  README.md  REMOTE_ACCESS_HIPAA_GUIDE.md  ROADMAP.md  STAGE_COMPLETION_CHECK.md  donext.md  eslint.config.js  firewoodbank.db-shm  firewoodbank.db-wal  index.html  movingCommandsGuide.md  package-lock.json  package.json  refactoringGuide.md  tsconfig.json  vite.config.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_add_work_order_assignees.sql  0002_stage5_2_intake.sql  0003_stage5_2_intake.sql  0004_audit_and_user_flags.sql  0005_add_user_driver_flag.sql  0006_add_driver_details.sql  0007_add_user_availability_schedule.sql  0008_add_client_wood_size_directions.sql  0009_add_client_first_last_name.sql  0010_remove_client_number.sql  0011_add_user_logins_and_addresses.sql  0012_add_auth_user_unique.sql  0013_add_work_order_pickup_quantity.sql  0014_add_work_order_pickup_delivery_type.sql  0015_add_audit_log_details.sql  0016_add_performance_indexes.sql  0017_seed_wood_inventory.sql  0018_add_client_mileage.sql  0019_add_work_order_hours.sql  0020_drop_hours_worked.sql  0021_add_wood_taken_tracking.sql  0022_add_work_order_constraints_and_indexes.sql  0023_add_financial_tracking.sql  0024_fix_work_order_status_handling.sql  0025_enhance_client_handling.sql  0026_add_auth_login_attempts.sql  0027_add_work_order_number.sql  0028_add_household_and_dob.sql  (+1 more)
src-tauri/src/: db.rs  main.rs  (+1 more)
(+54 files in other folders)
