[package]
name = "firewoodbank2"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3

