[package]
name = "firewoodbank2"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
build = "build.rs"
default-run = "firewoodbank2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
bcrypt = "0.15"

[profile.release]
opt-level = 3

